# Role-Mining

./: README.md  main.py  pyproject.toml  requirements.txt
data/: entitlements.csv  entitlements_ready.csv  entitlements_ready_new.csv  synthetic_entitlements.csv
role_mining/: __init__.py  data_pipeline.py  mining_models.py
ui/: role_mining_app.py  role_mining_new.py
