[project]
name = "role-mining-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.6",
    "mlxtend>=0.21.0",
    "numpy>=1.24",
    "pandas>=1.5",
    "scikit-learn>=1.2",
    "scipy>=1.9",
    "streamlit>=1.20",
]
